Added ability to toggle text shadow. Added ability to have up to 2 characters. Added text offset to help center text.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "tequilarapido/letter-avatar",
+    "name": "michaelruelas/letter-avatar",
     "description": "Provide a simple way to create letter avatar images, like those in your Gmail inbox",
     "keywords": ["letter", "avatar", "generator"],
     "license": "MIT",
@@ -7,6 +7,10 @@
         {
             "name": "tequilarapido.",
             "email": "dev@tequilarapido.com"
+        },
+        {
+            "name": "Michael Ruelas",
+            "email": "michaelruelas@gmail.com"
         }
     ],
     "require": {
